--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,12 @@ dependencies:
   bloc: ^8.1.2
   equatable: ^2.0.5
   get_it: ^7.6.4
+  path_provider: ^2.1.1
 
   # Networking
   dio: ^5.3.3
+  pretty_dio_logger: ^1.3.1
+  connectivity_plus: ^5.0.2
 
   # Storage
   hive: ^2.2.3
