--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: pegasus_app
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: '>=3.2.0 <4.0.0'
@@ -16,6 +16,8 @@ dependencies:
   equatable: ^2.0.5
   get_it: ^7.6.4
   path_provider: ^2.1.1
+  formz: ^0.5.1
+  dartz: ^0.10.1
 
   # Networking
   dio: ^5.3.3
@@ -42,6 +44,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
